# EquiTick

./: CMakeLists.txt  README.md
Desktop/3rd Yr/My Codespace/Projects/EquiTick/: README.md
Desktop/3rd Yr/My Codespace/Projects/EquiTick/include/: anomaly_detector.hpp  hardware_utils.hpp  online_regression.hpp  ring_buffer.hpp  simd_math.hpp
Desktop/3rd Yr/My Codespace/Projects/EquiTick/src/: main.cpp
dashboard/: package.json
dashboard/src/: App.tsx  index.css
include/: anomaly_detector.hpp  interceptor.hpp  memory_pool.hpp  types.hpp
src/: main.cpp
